[package]
name = "berk"
version = "0.1.0"
authors = ["Jonathan Stites <mail@jonstites.com>"]
description = "Hopefully this will be a git implementation"
edition = "2018"
readme = "README.md"
documentation = "https://github.com/jonstites/berk"
homepage = "https://github.com/jonstites/berk"
repository = "https://github.com/jonstites/berk"
license = "MIT OR Apache-2.0"

[badges]
travis-ci = { repository = "jonstites/berk", branch = "master" }

[dependencies]
clap = "2.33"
#sha-1 = "0.8.1"
time = "0.1.42"
rust-crypto = "0.2.36"
error-chain = "0.12.1"
structopt = "0.2.18"
[dependencies.rusqlite]
version = "0.19.0"
features = ["bundled"]
