[package]
name = "berk"
version = "0.1.0"
authors = ["Jonathan Stites <mail@jonstites.com>"]
description = "Hopefully this will be a git implementation"
edition = "2018"
readme = "README.md"
documentation = "https://github.com/jonstites/berk"
homepage = "https://github.com/jonstites/berk"
repository = "https://github.com/jonstites/berk"
license = "MIT OR Apache-2.0"

[badges]
travis-ci = { repository = "jonstites/berk", branch = "master" }


[dependencies]
failure = "0.1.6"
exitfailure = "0.5.1"
diesel = { version = "1.4.3", features = ["sqlite"] }
diesel_migrations = "1.4.0"
structopt = "0.3"
walkdir = "2.2"